--- a/estilos/estilo.css
+++ b/estilos/estilo.css
@@ -2,7 +2,7 @@
     margin: 0;
     padding: 0;
 }
-.fundo{
+.container{
     background-image: linear-gradient(45deg, black, rgb(20, 220, 127));
     height: 90vh;
     color: white;
